--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1235,6 +1235,7 @@ Metrics/CyclomaticComplexity:
   Max: 6
 
 Metrics/LineLength:
+  Enabled: false
   Max: 80
   # To make it possible to copy or click on URIs in the code, we allow lines
   # containing a URI to be longer than Max.
